8/2/11 tweak sizes and locations of some things, so that there are no collisions when rotating molecule
8/2/11 for 2-atom molecule, molecular dipole is identical to bond dipole
8/2/11 make Bond dipole field a vector instead of a scalar
8/2/11 add infrastructure for aligning molecular dipole with E-field over time
8/2/11 Jmol: limit display of partial charge to 2 decimal places
8/2/11 Implemented TwoAtomMoleculeNode.RotationHandler
8/2/11 Set position of partial charges relative to their associated atoms
8/2/11 Centered the play area in the panel
8/1/11 simple implementation of bond type (covalent/ionic) display
# 0.00.05 (54624) Jul 29, 2011
7/29/11 reduce font size of MoleculeComboBoxNode (temporarily?), so that popup fits in the play area, workaround for #3025
7/29/11 Jmol: switch to mol2 files provided by KL, add additional molecules
7/28/11 Jmol: separate chem data files into separate directories, by file type
# 0.00.04 (54576) Jul 27, 2011
7/27/11 Jmol: order molecules in combo box by increasing size/complexity
7/27/11 Jmol: make bond and atoms translucent when dipoles are visible
7/27/11 Jmol: use custom (colorblind) red for oxygen atoms
7/27/11 Jmol: remove duplicate code in readers for files and jar resources
7/27/11 Jmol: disable hovers
7/27/11 Jmol: disable zooming
7/27/11 Jmol: customize color and thickness of bonds, doc ball-and-stick script commands
7/27/11 Jmol: display partial charge as part of atom label
7/27/11 Jmol: increase font size of Jmol labels, set label color to black for all atoms
# 0.00.03 (54557) Jul 27, 2011
7/27/11 Jmol: use KL's list of molecules and SDF files
7/27/11 Jmol: check in SDF files obtained from PubChem (http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi)
7/27/11 Jmol: use KL's method of creating mep isosurface
7/26/11 intermediate implementation of partial charge view (not positioned correctly)
7/26/11 bond dipole view based on Vector2DNode