@@ -6,7 +6,6 @@ HIGH
 MEDIUM
 - rewrite BondDipoleNode, it's overly complicated because it doesn't use dipole angle
 - what to do about molecules that have no partial charges? (molecules composed of 2 of the same atom)
-- set visibility of module-specific controls in control panels
 - add icons to control panels (dipoles, partial charge, mep,...)
 - find out why scenegraph doesn't take up full width in MPCanvas
 - add minor and major ticks to EN control
